2005-06-02 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCIndexWriter.m:
	* Source/Store/LCFSDirectory.m:
	Update to Lucene SVN (179620).

2005-06-01 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCSegmentInfos.m:
	Fix bug on Linux. Not sure why it causes problem.
	* Source/Index/LCTerm.m:
	Deal situation of nil LCTerm.
	* GNUmakefile:
	Fix typo for test units.

2005-05-28 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* GNUmakefile:
	remove dependency of UnitKit while make LuceneKit as library.
	* Headers/Analysis/LCTokenizer.h:
	include LCReader protocol correctly.
	* Source/Util/NSData+Additions.m:
	add new line in the end of file.
	* Source/Index/LCTermVectorOffsetInfo.m:
	use id instead of NSObject for -isEqual:.
	* GNUmakefile.header:
	install NSData+Additions.h

2005-05-22 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Headers/Index/LCIndexWriter.h
	* Source/Index/LCIndexWriter.m
	* Source/Index/TestIndexWriter.m:
	Change -documentCount to -numberOfDocuments

2005-05-21 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Headers/Util/NSData+Additions.h:
	* Source/Util/NSData+Additions.m:
	* Source/Document/TestBinaryDocument.m:
	Use zlib for compression.
	* Make <LuceneKit/LuceneKit.h> work.
	* Fix a weird error of building framework with Xcode.
	* Current test result: 
	Result: 40 classes, 102 methods, 352130 tests, 0 failed

2005-05-20 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Move private methods into implementation.
	* replace "Enum" with "Enumerator".
	* replace "TermDocs" with "TermDocuments".

2005-05-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestSort.m: ported.
	* Current test result: 
	Result: 39 classes, 101 methods, 352123 tests, 0 failed

2005-05-17 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestQueryTermVector.m: ported.

2005-05-17 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/Search/LCHits.h (-initWithSearcher:query:filter:sort:): Renamed 