@@ -1,3 +1,9 @@
+2005-06-04 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* Source/Index/LCIndexReader.m:
+	* Source/Store/LCSegmentInfos.m:
+	Update to Lucene SVN (180066).
+
 2005-06-02 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
 	* Source/Index/LCIndexWriter.m:
